remove break in hatebert

--- a/explore_labels.ipynb
+++ b/explore_labels.ipynb
@@ -2,15 +2,199 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-10-06T18:29:24.028958Z",
+     "start_time": "2024-10-06T18:29:24.025964Z"
+    }
    },
+   "source": "import pandas as pd",
    "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "In this notebook, we are going to conduct an analysis of which comments our models got wrong.",
+   "id": "f2cfaab0c404c711"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T18:31:49.887676Z",
+     "start_time": "2024-10-06T18:31:49.721360Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    ""
-   ]
+    "results = pd.read_json('results/llama/hatexplain.json')\n",
+    "results.head()"
+   ],
+   "id": "4b4c7440ca8aa38b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                       post_id  \\\n",
+       "0  1179055004553900032_twitter   \n",
+       "1  1179063826874032128_twitter   \n",
+       "2  1178793830532956161_twitter   \n",
+       "3  1179088797964763136_twitter   \n",
+       "4  1179085312976445440_twitter   \n",
+       "\n",
+       "                                                text  annotator_count  label  \\\n",
+       "0  i dont think im getting my baby them white 9 h...                3      0   \n",
+       "1  we cannot continue calling ourselves feminists...                3      0   \n",
+       "2                      nawt yall niggers ignoring me                3      0   \n",
+       "3  <user> i am bit confused coz chinese ppl can n...                3      1   \n",
+       "4  this bitch in whataburger eating a burger with...                3      1   \n",
+       "\n",
+       "                                     original_labels  \\\n",
+       "0  [{'label': 'normal', 'annotator_id': 1, 'targe...   \n",
+       "1  [{'label': 'normal', 'annotator_id': 1, 'targe...   \n",
+       "2  [{'label': 'normal', 'annotator_id': 4, 'targe...   \n",
+       "3  [{'label': 'hatespeech', 'annotator_id': 1, 't...   \n",
+       "4  [{'label': 'hatespeech', 'annotator_id': 4, 't...   \n",
+       "\n",
+       "                                          rationales  \\\n",
+       "0                                                 []   \n",
+       "1                                                 []   \n",
+       "2                                                 []   \n",
+       "3  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...   \n",
+       "4  [[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...   \n",
+       "\n",
+       "                                         post_tokens  \\\n",
+       "0  [i, dont, think, im, getting, my, baby, them, ...   \n",
+       "1  [we, cannot, continue, calling, ourselves, fem...   \n",
+       "2                [nawt, yall, niggers, ignoring, me]   \n",
+       "3  [<user>, i, am, bit, confused, coz, chinese, p...   \n",
+       "4  [this, bitch, in, whataburger, eating, a, burg...   \n",
+       "\n",
+       "                                              prompt predicted_label  \n",
+       "0  Is the following text hate speech? Answer with...               0  \n",
+       "1  Is the following text hate speech? Answer with...         Text: \"  \n",
+       "2  Is the following text hate speech? Answer with...       \\end{code  \n",
+       "3  Is the following text hate speech? Answer with...                  \n",
+       "4  Is the following text hate speech? Answer with...         1\\n\\nIs  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>annotator_count</th>\n",
+       "      <th>label</th>\n",
+       "      <th>original_labels</th>\n",
+       "      <th>rationales</th>\n",
+       "      <th>post_tokens</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>predicted_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1179055004553900032_twitter</td>\n",
+       "      <td>i dont think im getting my baby them white 9 h...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'label': 'normal', 'annotator_id': 1, 'targe...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[i, dont, think, im, getting, my, baby, them, ...</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1179063826874032128_twitter</td>\n",
+       "      <td>we cannot continue calling ourselves feminists...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'label': 'normal', 'annotator_id': 1, 'targe...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[we, cannot, continue, calling, ourselves, fem...</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td>Text: \"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1178793830532956161_twitter</td>\n",
+       "      <td>nawt yall niggers ignoring me</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'label': 'normal', 'annotator_id': 4, 'targe...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[nawt, yall, niggers, ignoring, me]</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td>\\end{code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1179088797964763136_twitter</td>\n",
+       "      <td>&lt;user&gt; i am bit confused coz chinese ppl can n...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'label': 'hatespeech', 'annotator_id': 1, 't...</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "      <td>[&lt;user&gt;, i, am, bit, confused, coz, chinese, p...</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1179085312976445440_twitter</td>\n",
+       "      <td>this bitch in whataburger eating a burger with...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'label': 'hatespeech', 'annotator_id': 4, 't...</td>\n",
+       "      <td>[[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "      <td>[this, bitch, in, whataburger, eating, a, burg...</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td>1\\n\\nIs</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Once the results of the inference are loaded, we are going to clean them up.",
+   "id": "d3550d6af0ab8c62"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "2548f9fb4e6b4c60"
   }
  ],
  "metadata": {
