add some label exploration

--- a/explore_labels.ipynb
+++ b/explore_labels.ipynb
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T18:31:49.887676Z",
-     "start_time": "2024-10-06T18:31:49.721360Z"
+     "end_time": "2024-10-06T18:44:22.350261Z",
+     "start_time": "2024-10-06T18:44:22.201556Z"
     }
    },
    "cell_type": "code",
@@ -175,12 +175,12 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -189,12 +189,228 @@
    "id": "d3550d6af0ab8c62"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T18:44:24.500244Z",
+     "start_time": "2024-10-06T18:44:24.456418Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def safe_cast_to_int(val):\n",
+    "    \"\"\"\n",
+    "    Safe casting for those predicted labels that don't actually have any meaningful result\n",
+    "    :param val: \n",
+    "    :return: int\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        return int(val)\n",
+    "    except (ValueError, TypeError):\n",
+    "        return 2 # will be our \"no label\" code\n",
+    "\n",
+    "results['predicted_label'] = results['predicted_label'].str.replace(r'\\D', '', regex=True)\n",
+    "results['label'] = results['label'].apply(safe_cast_to_int)\n",
+    "results['predicted_label'] = results['predicted_label'].apply(safe_cast_to_int)\n",
+    "mismatched_rows = results[results['label'] != results['predicted_label']]"
+   ],
+   "id": "2548f9fb4e6b4c60",
+   "outputs": [],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T18:45:00.403923Z",
+     "start_time": "2024-10-06T18:45:00.390313Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "mismatched_rows.head()",
+   "id": "96ba1e5d22e80044",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                       post_id  \\\n",
+       "1  1179063826874032128_twitter   \n",
+       "2  1178793830532956161_twitter   \n",
+       "3  1179088797964763136_twitter   \n",
+       "5                 13851720_gab   \n",
+       "6                 24198545_gab   \n",
+       "\n",
+       "                                                text  annotator_count  label  \\\n",
+       "1  we cannot continue calling ourselves feminists...                3      0   \n",
+       "2                      nawt yall niggers ignoring me                3      0   \n",
+       "3  <user> i am bit confused coz chinese ppl can n...                3      1   \n",
+       "5  laura loomer raped me while screaming at me in...                3      1   \n",
+       "6  and this is why i end up with nigger trainee d...                3      1   \n",
+       "\n",
+       "                                     original_labels  \\\n",
+       "1  [{'label': 'normal', 'annotator_id': 1, 'targe...   \n",
+       "2  [{'label': 'normal', 'annotator_id': 4, 'targe...   \n",
+       "3  [{'label': 'hatespeech', 'annotator_id': 1, 't...   \n",
+       "5  [{'label': 'hatespeech', 'annotator_id': 1, 't...   \n",
+       "6  [{'label': 'hatespeech', 'annotator_id': 4, 't...   \n",
+       "\n",
+       "                                          rationales  \\\n",
+       "1                                                 []   \n",
+       "2                                                 []   \n",
+       "3  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...   \n",
+       "5  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0,...   \n",
+       "6  [[0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1,...   \n",
+       "\n",
+       "                                         post_tokens  \\\n",
+       "1  [we, cannot, continue, calling, ourselves, fem...   \n",
+       "2                [nawt, yall, niggers, ignoring, me]   \n",
+       "3  [<user>, i, am, bit, confused, coz, chinese, p...   \n",
+       "5  [laura, loomer, raped, me, while, screaming, a...   \n",
+       "6  [and, this, is, why, i, end, up, with, nigger,...   \n",
+       "\n",
+       "                                              prompt  predicted_label  \n",
+       "1  Is the following text hate speech? Answer with...                2  \n",
+       "2  Is the following text hate speech? Answer with...                2  \n",
+       "3  Is the following text hate speech? Answer with...                2  \n",
+       "5  Is the following text hate speech? Answer with...                0  \n",
+       "6  Is the following text hate speech? Answer with...                2  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>annotator_count</th>\n",
+       "      <th>label</th>\n",
+       "      <th>original_labels</th>\n",
+       "      <th>rationales</th>\n",
+       "      <th>post_tokens</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>predicted_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1179063826874032128_twitter</td>\n",
+       "      <td>we cannot continue calling ourselves feminists...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'label': 'normal', 'annotator_id': 1, 'targe...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[we, cannot, continue, calling, ourselves, fem...</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1178793830532956161_twitter</td>\n",
+       "      <td>nawt yall niggers ignoring me</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'label': 'normal', 'annotator_id': 4, 'targe...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[nawt, yall, niggers, ignoring, me]</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1179088797964763136_twitter</td>\n",
+       "      <td>&lt;user&gt; i am bit confused coz chinese ppl can n...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'label': 'hatespeech', 'annotator_id': 1, 't...</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
+       "      <td>[&lt;user&gt;, i, am, bit, confused, coz, chinese, p...</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>13851720_gab</td>\n",
+       "      <td>laura loomer raped me while screaming at me in...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'label': 'hatespeech', 'annotator_id': 1, 't...</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0,...</td>\n",
+       "      <td>[laura, loomer, raped, me, while, screaming, a...</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>24198545_gab</td>\n",
+       "      <td>and this is why i end up with nigger trainee d...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[{'label': 'hatespeech', 'annotator_id': 4, 't...</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1,...</td>\n",
+       "      <td>[and, this, is, why, i, end, up, with, nigger,...</td>\n",
+       "      <td>Is the following text hate speech? Answer with...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-06T18:52:19.178526Z",
+     "start_time": "2024-10-06T18:52:19.169296Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "failed_rows = mismatched_rows[mismatched_rows['predicted_label'] == 2]\n",
+    "misclassified_rows = mismatched_rows[mismatched_rows['predicted_label'] != 2]\n",
+    "\n",
+    "print(f'Failed to classify {len(failed_rows)} data points.\\nMisclassified {len(misclassified_rows)} data points.\\nTotal failed or misclassified: {len(failed_rows) + len(misclassified_rows)} / {len(results)}')"
+   ],
+   "id": "416525d8aaf405de",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to classify 7817 data points.\n",
+      "Misclassified 6818 data points.\n",
+      "Total failed or misclassified: 14635 / 20148\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "2548f9fb4e6b4c60"
+   "id": "6228f3b8cf23e77d"
   }
  ],
  "metadata": {
